--- a/liquibase-core/pom.xml
+++ b/liquibase-core/pom.xml
@@ -10,12 +10,12 @@
     <parent>
         <groupId>org.liquibase</groupId>
         <artifactId>liquibase-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.5.3-pa</version>
     </parent>
 
     <properties>
         <bundle.namespace>liquibase.*</bundle.namespace>
-        <project.version>3.5.3</project.version>
+        <project.version>3.5.3-pa</project.version>
     </properties>
 
     <dependencies>
