--- a/pom.xml
+++ b/pom.xml
@@ -434,14 +434,14 @@
 
     <distributionManagement>
         <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Sonatype Production Repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+            <id>pressassociation.releases</id>
+            <name>Nexus Release Repo</name>
+            <url>http://nexus.howden.press.net/nexus/content/repositories/releases</url>
         </repository>
         <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sontatype Snapshot Repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>pressassociation.snapshots</id>
+            <name>Nexus Snapshot Repo</name>
+            <url>http://nexus.howden.press.net/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
     </distributionManagement>
 
